--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
       crossorigin="anonymous"
     ></script>
     <script src="./assets/js/data.js"></script>
+    <script src="./assets/js/headingData.js"></script>
     <script src="./assets/js/script.js"></script>
   </body>
 </html>
