--- a/migration/index.html
+++ b/migration/index.html
@@ -2,7 +2,7 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>CodePen - Քարին Տակ</title>
+  <title>Քարին Տակ</title>
   <link rel="stylesheet" href="./style.css">
 
 </head>
