--- a/plans/index.html
+++ b/plans/index.html
@@ -2,7 +2,7 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>Population pyramid</title>
+  <title>Քարինտակ—հետագա պլաններ</title>
   <link rel="stylesheet" href="./style.css">
 
 </head>
@@ -10,10 +10,15 @@
 <!-- partial:index.partial.html -->
 <script src="https://cdn.amcharts.com/lib/4/core.js"></script>
 <script src="https://cdn.amcharts.com/lib/4/charts.js"></script>
-<script src="https://cdn.amcharts.com/lib/4/maps.js"></script>
-<script src="https://cdn.amcharts.com/lib/4/geodata/usaAlbersLow.js"></script>
 <script src="https://cdn.amcharts.com/lib/4/themes/animated.js"></script>
 <div id="chartdiv"></div>
+
+<p>
+  <b>* Կվերադառնան պայմանով `</b> <br>
+  Կվերադառնան, եթե բնակարանով ապահովեն - 119 <br>
+  Կվերադառնան, եթե իրենց գյուղը վերադարձնեն -	42 <br>
+Կարթագաղթեն, եթե իրավիճակը նույնը մնա -	18 <br>
+Կվերադառնան, եթե Արցախում վիճակը լավ լինի -	17
 <!-- partial -->
   <script  src="./script.js"></script>
 
