seems to be final

--- a/demography/index.html
+++ b/demography/index.html
@@ -4,7 +4,15 @@
   <meta charset="UTF-8">
   <title>Population pyramid</title>
   <link rel="stylesheet" href="./style.css">
-
+  <style>
+    .mediafactory-link{
+      color:#03b2a4;
+      
+    }
+    .mediafactory-footer{
+      text-align: right;
+    }
+  </style>
 </head>
 <body>
 <!-- partial:index.partial.html -->
@@ -14,6 +22,7 @@
 <script src="https://cdn.amcharts.com/lib/4/geodata/usaAlbersLow.js"></script>
 <script src="https://cdn.amcharts.com/lib/4/themes/animated.js"></script>
 <div id="chartdiv"></div>
+<p class="mediafactory-footer">Հետք Մեդիա Գործարան<br> <span class="mediafactory-link">https://mediafactory.am</span><br> Հայկ Մակիյան</p>
 <!-- partial -->
   <script  src="./script.js"></script>
 
