--- a/plans/index.html
+++ b/plans/index.html
@@ -15,10 +15,11 @@
 
 <p>
   <b>* Կվերադառնան պայմանով `</b> <br>
-  Կվերադառնան, եթե բնակարանով ապահովեն - 119 <br>
-  Կվերադառնան, եթե իրենց գյուղը վերադարձնեն -	42 <br>
-Կարթագաղթեն, եթե իրավիճակը նույնը մնա -	18 <br>
-Կվերադառնան, եթե Արցախում վիճակը լավ լինի -	17
+  եթե բնակարանով ապահովեն - 119 <br>
+  եթե իրենց գյուղը վերադարձնեն -	42 <br>
+  եթե Արցախում վիճակը լավ լինի -	17 <br>
+  Կարթագաղթեն, <br>եթե իրավիճակը նույնը մնա -	18 <br>
+  
 <!-- partial -->
   <script  src="./script.js"></script>
 
