--- a/iframes.html
+++ b/iframes.html
@@ -22,9 +22,9 @@
 
     <iframe src="https://mediafactoryam.github.io/qarintakiframes/plans/" width="100%" height="600px" frameborder="0"></iframe>
 
-    <img src="https://mediafactoryam.github.io/property/Qarintak_visual.svg" width="100%">
+    <img src="https://mediafactoryam.github.io/qarintakiframes/property/Qarintak_visual.svg" width="100%">
 
-    <iframe src="/victims/index_with_title.html" frameborder="0" width="100%" height="500px"></iframe>
+    <iframe src="https://mediafactoryam.github.io/qarintakiframes/victims/index_with_title.html" frameborder="0" width="100%" height="500px"></iframe>
     
 </body>
 </html>
