--- a/plans/index.html
+++ b/plans/index.html
@@ -1,27 +1,27 @@
-<!DOCTYPE html>
+
 <html lang="en" >
-<head>
-  <meta charset="UTF-8">
-  <title>Քարինտակ—հետագա պլաններ</title>
-  <link rel="stylesheet" href="./style.css">
-
-</head>
-<body>
-<!-- partial:index.partial.html -->
-<script src="https://cdn.amcharts.com/lib/4/core.js"></script>
-<script src="https://cdn.amcharts.com/lib/4/charts.js"></script>
-<script src="https://cdn.amcharts.com/lib/4/themes/animated.js"></script>
-<div id="chartdiv"></div>
-
-<p>
-  <b>* Կվերադառնան պայմանով `</b> <br>
-  եթե բնակարանով ապահովեն - 119 <br>
-  եթե իրենց գյուղը վերադարձնեն -	42 <br>
-  եթե Արցախում վիճակը լավ լինի -	17 <br>
-  Կարթագաղթեն, <br>եթե իրավիճակը նույնը մնա -	18 <br>
+  <head>
+    <meta charset="UTF-8">
+    <title>Քարինտակ—հետագա պլաններ</title>
+    <link rel="stylesheet" href="./style.css">
   
-<!-- partial -->
-  <script  src="./script.js"></script>
-
-</body>
-</html>
+  </head>
+  <body>
+  <!-- partial:index.partial.html -->
+  <script src="https://cdn.amcharts.com/lib/4/core.js"></script>
+  <script src="https://cdn.amcharts.com/lib/4/charts.js"></script>
+  <script src="https://cdn.amcharts.com/lib/4/themes/animated.js"></script>
+  <div id="chartdiv"></div>
+  
+  <p>
+    <b>* Կվերադառնան. </b> <br>
+    եթե բնակարանով ապահովեն - 119 <br>
+    եթե իրենց գյուղը վերադարձնեն -  42 <br>
+    եթե Արցախում վիճակը լավ լինի -  17 <br>
+    Կարթագաղթեն. <br>եթե իրավիճակը նույնը մնա -  18 <br>
+    
+  <!-- partial -->
+    <script  src="./script.js"></script>
+  
+  </body>
+  </html>
